@@ -1,3 +1,6 @@
+[B][COLOR gold]v4.01.11[/COLOR][/B]
+- Code cleanup
+
 [B][COLOR gold]v4.01.10[/COLOR][/B]
 - Fixed TMDb trailers listed twice
 - Tweaked YouTube trailers search query
@@ -27,7 +30,7 @@
 - Size filtering changes:
     Min/Max movie/episode size settings removed, and replaced with new Min/Max
     GB per hour setting, that applies to both movies & episodes
-- Added new [I]Scrape Unfiltered[/I] context menu entry, that when triggered the add-on
+- Added new [I]Scrape Filterless[/I] context menu entry, that when triggered the add-on
   starts scraping with all sources filters (incl. pre-emptive termination) ignored
 
 [B][COLOR gold]v4.01.01[/COLOR][/B]
